SERVER-16324 OpDebug::report() should read query from OpDebug, not CurOp